--- a/htmlテンプレート.html
+++ b/htmlテンプレート.html
@@ -2,7 +2,7 @@
 <html lang="jp">
   <head>
     <meta charset="utf-8">
-    <title>title</title>
+    <title>タイトルテスト</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
